# lean-Langchain

./: .env.example  README.md  pyproject.toml
foreword/: chat_with_langchain.py  chat_with_openai.py  foreword.md  langchain_stream.py  openai_stream.py
messages/: ai_message.py  basic_usage.py  conversation_history.py  human_message.py  messages.md  multimodal.py  streaming.py  system_message.py  token_usage.py  tool_calls.py  tool_message.py
models/: batch.py  init.py  invoke.py  model.md  stream.py  structured_output.py  token_usage.py
overview/: overview.md
