[project]
name = "lean-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.2",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
]
